Add AuthenticationMvcController. add LoginValidationGroup, add LoginView, RegisterView, user-form small change to EntityDuplicateException new validation method in AuthenticationHelper

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -2,3 +2,8 @@ page.title.home=Photo Contest
 page.title.not-found=Page Not Found
 page.title.access-denied=Access Denied
 page.title.error=Error Page
+
+user-form.create=Register User
+user-form.login=Login
+user-form.update=Update User
+page.register=Register
