add UsersView and UserView templates. small changes in LoginView and RegisterView. add UserMvcController

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -7,3 +7,4 @@ user-form.create=Register User
 user-form.login=Login
 user-form.update=Update User
 page.register=Register
+page.title.user-profile=User Profile
