--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -8,3 +8,4 @@ user-form.login=Login
 user-form.update=Update User
 page.register=Register
 page.title.user-profile=User Profile
+page.title.user-update=Update User
