small changes to showLoginPage, showRegisterPage, add change permissions functionality.

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -6,6 +6,7 @@ page.title.error=Error Page
 user-form.create=Register User
 user-form.login=Login
 user-form.update=Update User
+user-form.permissions=Permissions
 page.register=Register
 page.title.user-profile=User Profile
 page.title.user-update=Update User
