--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -2,6 +2,7 @@ page.title.home=Photo Contest
 page.title.not-found=Page Not Found
 page.title.access-denied=Access Denied
 page.title.error=Error Page
+page.title.contest=Contest Page
 
 user-form.create=Register User
 user-form.login=Login
