add showCreatePhotoPage in ContestMvcController add photo-form-new.html, photo-form.html, PhotoCreateView.html (in progress)

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -11,3 +11,5 @@ user-form.permissions=Permissions
 page.register=Register
 page.title.user-profile=User Profile
 page.title.user-update=Update User
+navbar.photo.create=Create Photo
+photo.label.title=Title
