fix: Fixed contest deletion

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -2,7 +2,9 @@ page.title.home=Photo Contest
 page.title.not-found=Page Not Found
 page.title.access-denied=Access Denied
 page.title.error=Error Page
-page.title.contest=Contest Page
+page.title.contest=Contest
+page.title.contests=All Contests
+page.title.contest-create=Create Contest
 
 user-form.create=Register User
 user-form.login=Login
