add PhotoJunkiesView.html, OptionalWithSizeConstraint, OptionalWithSizeConstraintValidator. add PhotoJunkiesView.html, PhotoCreateView.html

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -15,3 +15,6 @@ page.title.user-profile=User Profile
 page.title.user-update=Update User
 navbar.photo.create=Create Photo
 photo.label.title=Title
+user.organizer=Organizer
+user-form.users=Users
+user-form.photo-junkies=Photo Junkies
