feat: Implemented ContestCreateView.html

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -5,6 +5,7 @@ page.title.error=Error Page
 page.title.contest=Contest
 page.title.contests=All Contests
 page.title.contest-create=Create Contest
+page.title.contest-update=Update Contest
 
 user-form.create=Register User
 user-form.login=Login
