implement Test PhotoView page. implement new method in PhotoServices: getPhotoByContestId (new test must be implemented) add new page for PhotoJunkies with a possibility to sort them by Rank

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -18,3 +18,5 @@ photo.label.title=Title
 user.organizer=Organizer
 user-form.users=Users
 user-form.photo-junkies=Photo Junkies
+page.title.photo=Photo Page
+deleted.user.message=anonymous
