feat: Implemented enlist user / jury to contest

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -6,6 +6,7 @@ page.title.contest=Contest
 page.title.contests=All Contests
 page.title.contest-create=Create Contest
 page.title.contest-update=Update Contest
+page.title.contest-enlist=Enlist User
 
 user-form.create=Register User
 user-form.login=Login
