implement Register and Forgotten Password buttons in LoginView. Implement email password change (still in process)

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -21,3 +21,5 @@ user-form.users=Users
 user-form.photo-junkies=Photo Junkies
 page.title.photo=Photo Page
 deleted.user.message=anonymous
+user-form.forgotten.password=Forgotten Password
+user-form.change.password=Change Password
