implement EmailSentView.html

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -24,3 +24,4 @@ page.title.photo=Photo Page
 deleted.user.message=anonymous
 user-form.forgotten.password=Forgotten Password
 user-form.change.password=Change Password
+email.sent=Email Sent
