implement Photo Review functionality (still in progress)

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -25,3 +25,5 @@ deleted.user.message=anonymous
 user-form.forgotten.password=Forgotten Password
 user-form.change.password=Change Password
 email.sent=Email Sent
+photo.label.comment=Comment
+page.review=Photo Review
