--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -7,6 +7,9 @@ page.title.contests=All Contests
 page.title.contest-create=Create Contest
 page.title.contest-update=Update Contest
 page.title.contest-enlist=Enlist User
+page.title.categories=Categories
+page.title.category-create=Create Category
+page.title.category-update=Update Category
 
 user-form.create=Register User
 user-form.login=Login
