change CreateReviewView.html to fit the design of CreateContestView

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -28,5 +28,6 @@ deleted.user.message=anonymous
 user-form.forgotten.password=Forgotten Password
 user-form.change.password=Change Password
 email.sent=Email Sent
+photo-review.create=Create Review
 photo.label.comment=Comment
 page.review=Photo Review
