small change in handleLogout method in AuthenticationMvcController implement PhotosView.html (in progress)

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -31,3 +31,4 @@ email.sent=Email Sent
 photo-review.create=Create Review
 photo.label.comment=Comment
 page.review=Photo Review
+page.title.photos=All Photos
