fix: Fixed issue with contest deletion, added phase verification

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -1,4 +1,4 @@
-page.title.home=Photo Contest
+page.title.home=Photo Junkies Yard
 page.title.not-found=Page Not Found
 page.title.access-denied=Access Denied
 page.title.error=Error Page
