implement showMyPhotos method and MyPhotosView

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -32,3 +32,4 @@ photo-review.create=Create Review
 photo.label.comment=Comment
 page.review=Photo Review
 page.title.photos=All Photos
+page.title.myphotos=My Photos
