update create.sql (change cover_photo column to 1000 varchar limit) add ConflictView.html small changes to delete,review buttons in ContestView.html small change in showCreatePhotoPage to check if the user has uploaded a photo a return ConflictView.html in case he/she did

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -33,3 +33,4 @@ photo.label.comment=Comment
 page.review=Photo Review
 page.title.photos=All Photos
 page.title.myphotos=My Photos
+page.title.conflict=Conflict
