add email update with email verification

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -12,7 +12,7 @@ page.title.category-create=Create Category
 page.title.category-update=Update Category
 
 user-form.create=Register User
-user-form.login=Login
+user-form.login=Log in
 user-form.update=Update User
 user-form.permissions=Permissions
 page.register=Register
@@ -34,3 +34,4 @@ page.review=Photo Review
 page.title.photos=All Photos
 page.title.myphotos=My Photos
 page.title.conflict=Conflict
+user-form.email=Update Email
